--- a/MyDemoProject/MyDemoPorject.PublicWebsite/index.html
+++ b/MyDemoProject/MyDemoPorject.PublicWebsite/index.html
@@ -34,7 +34,7 @@
 <h2>Home</h2>     
 </header>
 <div><br><br><br><br><br><br><br><br>
-   <p> <a href="#Catalog" float = right>Catalog</a></p> <p> &nbsp|&nbsp </p>
+   <p> <a href="http://www.facebook.com" float = right>Catalog</a></p> <p> &nbsp|&nbsp </p>
     <p> <a href="#Contact" float = left>Contact</a></p>
 </div> 
 <br><br>
